fixed FF message pane expand/collapse

--- a/main/courses/chat/static/candy_res/candy_full.css
+++ b/main/courses/chat/static/candy_res/candy_full.css
@@ -74,7 +74,8 @@ ul {
 	left: 0;
 	width: 27px;
 	height: 15px;
-	padding: 7px 0;
+	padding: 5px 0;
+	cursor: pointer;
 }
 #chat-tabs #chat-expand-arrow em {
 	font-size: 18px;
